# Matcha

./: .gitignore
api/: README.md  notes.txt  pyproject.toml  query_params.md  requirements.txt  run.sh
api/flaskr/: README.md  __init__.py  auth.py  db.py  fields.py  match_and_search.py  schema.sql  seed.py  socket.py  tag.py  user.py  utils.py  validators.py
api/flaskr/db/: __init__.py  base_model.py  create_tables.sql  fields.py  utils.py
api/flaskr/db_utils/: create_tables.sql  drop_tables.sql  schema.sql  sql_wrapper.py  user_model.py
api/flaskr/models/: __init__.py  block.py  egg_group.py  like.py  message.py  picture.py  profile.py  tag.py  type.py  user.py  user_tag.py  visit.py
api/flaskr/templates/: confirmation_mail.html  forgot_password.html
api/instance/: flaskr.sqlite  flaskr.sqlite-picture-1-picture
client/: jsconfig.json  next.config.js  package-lock.json  package.json  run.sh
client/components/: common.js  dropdown.js  searchEngine.js  sreachBar.js
client/components/picture/: picture.js
client/pages/: ChatPage.js  ScrollableTextBox.js  _app.js  chat.js  index.js  loader.js  login.js  picture.js  popup.js  popupchat.js  profile.js  register.js  reset.js  search.js  socket.js  updateProfile.js
client/pages/api/: apiUtils.js  formatBase64Jpeg.js
client/pages/setup/: geolocation.js
client/styles/: Home.module.css  circle.module.css  register.module.css
my-svelte-app/: package-lock.json  package.json
my-svelte-app/src/: App.svelte  Home.svelte
myapp/: .eslintrc.cjs  package-lock.json  package.json
myapp/src/resource/: cache.js
(+11 files in other folders)
