[tool.poetry]
name = "Matcha"
version = "0.1.0"
description = ""
authors = ["Technical Admin <technical-admin@cit.io>"]

[tool.poetry.dependencies]
Python = "~3.9.10"
Flask = "^2.2.2"
Flask-Mail = "^0.9.1"
email-validator = "^1.3.0"
Flask-Cors = "^3.0.10"
pandas = "^1.5.2"
geopy = "^2.3.0"
Faker = "^15.3.4"
